[package]
name = "sim6502"
version = "0.1.0"
edition = "2021"
authors = ["bwpge <bwpge.dev@gmail.com>"]
repository = "https://github.com/bwpge/sim6502-rs"
description = """
A graphical 6502 simulator built on lib6502.
"""
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
